Add CI that validates the behaviour unit tests can't see
Nothing validated this project but running it by hand, which is how the UI build
came to rot: the jar had no console in it and no signal said so.

Three jobs. backend runs the reactor on JDK 21 and 25 — the matrix is the point,
since dropping StructuredTaskScope/--enable-preview was specifically about not
being pinned to one JDK major version, and a regression would only surface on the
other one. package builds the console through Maven and then asserts the jar
really contains static/ui/index.html and the nested i18n JSON, and that the built
bundle references no remote font. integration boots a real Swarm, starts the
server from the fat jar, and drives it.

Every integration assertion maps to a defect that shipped and was invisible to
compilation and unit tests: i18n/pt.json must come back as JSON rather than the
SPA shell; a dry run must create nothing; riggerctl must receive raw log lines
rather than SSE data: frames; and the Swarm service's version index must stop
climbing, because a spec-hash mismatch once re-updated it every cycle forever
while looking perfectly healthy in the logs.

The browser walkthrough moves out of a scratch directory into e2e/ and becomes
assertion-based — 19 checks that exit non-zero on failure, verified by pointing
it at a wrong password and confirming it fails. It keeps its own package.json
rather than joining rigger-console, because npm ci there runs during every
mvn package and Playwright has no business slowing that down.

Validated by running each job's commands locally against a live Swarm, including
the convergence sampling and the CLI log framing check. CI itself is unproven
until it runs on the remote — and it deliberately does not cover multi-node
clusters, SSH provisioning, or HPA scaling under load.